[tool.poetry]
name = "hurricane-challenge"
version = "0.1.0"
description = ""
authors = ["Martim <martim.jose@btgpactual.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pandas = "1.3.0"
numpy = "1.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
